# jalali-pandas

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AGENTS.md  CHANGELOG.md  CNAME  README.md  asv.conf.json  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: ci.yml  deploy-on-pypi.yml  docs.yml  release-drafter.yml  release.yml  test-jalali-pandas.yml
.windsurf/rules/: project-planner-guides.md
benchmarks/: __init__.py  benchmark_arrays.py  benchmark_conversion.py  benchmark_resample.py  benchmark_timestamp.py
docs/: benchmarks.md  index.md
docs/assets/: extra.css  rtl.js
docs/en/: benchmarks.md  changelog.md  contributing.md  deployment.md  index.md  installation.md  quickstart.md  release-checklist.md
docs/en/api/: accessors.md  api.md  core.md  index.md  offsets.md
docs/en/examples/: basic-usage.md  dataframe-operations.md  index-and-date-range.md  index.md  notebooks.md  offsets.md  series-operations.md
docs/en/user-guide/: accessors.md  conversion.md  core-types.md  frequency-offsets.md  index-range.md  limitations.md  nat-handling.md  time-series.md  timezones.md
docs/fa/: benchmarks.md  changelog.md  contributing.md  deployment.md  index.md  installation.md  quickstart.md
docs/fa/api/: accessors.md  api.md  core.md  index.md  offsets.md
docs/fa/examples/: basic-usage.md  dataframe-operations.md  index-and-date-range.md  index.md  notebooks.md  offsets.md  series-operations.md
docs/fa/user-guide/: accessors.md  conversion.md  core-types.md  frequency-offsets.md  index-range.md  limitations.md  nat-handling.md  time-series.md  timezones.md
docs/scripts/: gen_api.py
en/api/: index.html
en/api/accessors/: index.html
en/api/api/: index.html
en/api/core/: index.html
en/api/offsets/: index.html
en/benchmarks/: index.html
en/changelog/: index.html
en/contributing/: index.html
en/deployment/: index.html
en/examples/: index.html
en/examples/basic-usage/: index.html
en/examples/dataframe-operations/: index.html
en/examples/index-and-date-range/: index.html
en/examples/notebooks/: index.html
en/examples/offsets/: index.html
en/examples/series-operations/: index.html
en/installation/: index.html
en/quickstart/: index.html
en/user-guide/accessors/: index.html
en/user-guide/conversion/: index.html
en/user-guide/core-types/: index.html
en/user-guide/frequency-offsets/: index.html
en/user-guide/index-range/: index.html
en/user-guide/limitations/: index.html
en/user-guide/nat-handling/: index.html
en/user-guide/time-series/: index.html
en/user-guide/timezones/: index.html
examples/: 00_zero_to_hero.ipynb  01_basic_usage.py  02_series_operations.py  03_dataframe_operations.py  04_offsets.py  05_index_and_date_range.py  06_calendar_utilities.py  07_grouper_and_resample.py  08_real_world_sales_report.py  09_error_handling.py  10_csv_operations.py  11_persian_formatting.py  basic_usage.ipynb
fa/: index.html
fa/api/: index.html
fa/api/accessors/: index.html
fa/api/api/: index.html
fa/api/core/: index.html
fa/api/offsets/: index.html
fa/benchmarks/: index.html
fa/changelog/: index.html
fa/contributing/: index.html
fa/deployment/: index.html
fa/examples/: index.html
fa/examples/basic-usage/: index.html
fa/examples/dataframe-operations/: index.html
fa/examples/index-and-date-range/: index.html
fa/examples/notebooks/: index.html
fa/examples/offsets/: index.html
fa/examples/series-operations/: index.html
fa/installation/: index.html
fa/quickstart/: index.html
fa/user-guide/accessors/: index.html
fa/user-guide/conversion/: index.html
fa/user-guide/core-types/: index.html
fa/user-guide/frequency-offsets/: index.html
fa/user-guide/index-range/: index.html
fa/user-guide/limitations/: index.html
fa/user-guide/nat-handling/: index.html
fa/user-guide/time-series/: index.html
fa/user-guide/timezones/: index.html
jalali-pandas/: serie_handler.py
jalali_pandas/: __init__.py  _typing.py  _version.py  df_handler.py  serie_handler.py
jalali_pandas/accessors/: __init__.py  dataframe.py  series.py
jalali_pandas/api/: __init__.py  conversion.py  date_range.py  grouper.py
jalali_pandas/compat/: __init__.py  legacy.py  pandas_compat.py
jalali_pandas/core/: __init__.py  arrays.py  calendar.py  conversion.py  dtypes.py  indexes.py  timestamp.py
jalali_pandas/offsets/: __init__.py  aliases.py  base.py  month.py  quarter.py  week.py  year.py
plans/: 1-jalali-pandas-north-star-plan.md  2-current-state-analysis.md  3-api-design.md  4-type-system.md  5-repository-design.md  6-testing-plan.md  7-documentation-plan.md  8-implementation-roadmap.md  9-feature-parity-checklist.md  phase8-release-automation-prompt.md
plans/tasks/: phase8-release-automation.md
scripts/: profile_conversion.py
scripts/release/: README.md  build.py  bump_version.py  changelog.py
search/: search_index.json
test/: df_test.py  series_test.py
tests/: df_test.py  series_test.py  test_accessors.py  test_aliases.py  test_api_conversion.py  test_arrays.py  test_calendar.py  test_compat.py  test_conversion.py  test_date_range.py  test_dtypes.py  test_indexes.py  test_integration.py  test_legacy.py  test_offsets.py  test_property_based.py  test_release_scripts.py  test_time_series.py  test_timestamp.py  test_week_offset.py
tests/property/: __init__.py  strategies.py  test_calendar.py  test_offsets.py  test_timestamp.py
