[project]
name = "jalali_pandas"
version = "0.2.2"
description = "A Pandas extension to make work with Jalali Date easier."
authors = [{ name = "Mehdi Ghodsizadeh", email = "mehdi.ghodsizadeh@gmail.com" }]
requires-python = ">=3.6,<4"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = ["jdatetime>=3.6.4,<4"]

[project.urls]
Homepage = "https://ghodsizadeh.github.io/jalali-pandas/"
Repository = "https://github.com/ghodsizadeh/jalali-pandas"
"Bug Tracker" = "https://github.com/ghodsizadeh/jalali-pandas/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
