[project]
name = "jalali-pandas"
version = "1.0.0"
description = "Full Jalali calendar support for pandas time series"
authors = [{ name = "Mehdi Ghodsizadeh", email = "mehdi.ghodsizadeh@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["jalali", "pandas", "persian", "shamsi", "calendar", "datetime", "timeseries"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "jdatetime>=4.0.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "hypothesis>=6.0.0",
    "pandas-stubs",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]
all = [
    "jalali-pandas[dev,docs]",
]

[project.urls]
Documentation = "https://ghodsizadeh.github.io/jalali-pandas/"
Homepage = "https://ghodsizadeh.github.io/jalali-pandas/"
Repository = "https://github.com/ghodsizadeh/jalali-pandas"
Changelog = "https://github.com/ghodsizadeh/jalali-pandas/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/ghodsizadeh/jalali-pandas/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jalali_pandas"]

[tool.hatch.build.targets.sdist]
include = [
    "/jalali_pandas",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["jalali_pandas"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["jalali_pandas"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jdatetime.*"]
ignore_missing_imports = true

# Pyright configuration
[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportMissingImports = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnnecessaryCast = false
reportUnnecessaryIsInstance = false
reportInvalidTypeForm = false
reportOperatorIssue = false
reportAssignmentType = false
reportMissingTypeStubs = false
